Fixed alignment on intial code segment

--- a/app/assets/stylesheets/sandboxes.scss
+++ b/app/assets/stylesheets/sandboxes.scss
@@ -35,6 +35,10 @@ a.item.active {
   z-index: 1000;
 }
 
+div.tab.segment {
+  background-color: #f8f8f8;
+}
+
 div.ui.segment.code-segment {
   background-color: #f8f8f8;
   height: 100%;
